# edgedb

./: .coveragerc  .edgeql_interpreter_history.temp.txt  .editorconfig  .flake8  .gitignore  .gitlab-ci.yml  .gitmodules  .mailmap  .travis.yml  CODE_OF_CONDUCT.md  CONTRIBUTING.rst  Cargo.toml  MANIFEST.in  Makefile  NOTICE  README.md  a.edgeql  a.py  a.sh  a.sqlite  build_backend.py  conftest.py  development.rst  docker-compose.yml  fts.edgeql  get_postgis_func.py  interp_test.sqlite  interp_test_2.sqlite  interp_test_2.sqlite-journal  modules.lst  mypy.ini  package-lock.json  parser-chumsky.py  parsetest2.py  parsetest3.py  postgis.3.2.4.template.edgeql  pyproject.toml  pytest.ini  requirements.txt  run_cli.py  (+13 more)
edb/edgeql-parser/: Cargo.toml
edb/edgeql-parser/benches/: bench.rs
edb/edgeql-parser/edgeql-parser-derive/: Cargo.toml
edb/edgeql-parser/edgeql-parser-derive/src/: lib.rs
edb/edgeql-parser/edgeql-parser-python/: Cargo.toml
edb/edgeql-parser/edgeql-parser-python/src/: cparser.rs  errors.rs  hash.rs  keywords.rs  lib.rs  normalize.rs  parser.rs  position.rs  pynormalize.rs  tokenizer.rs  unpack.rs
edb/edgeql-parser/edgeql-parser-python/tests/: normalize.rs
edb/edgeql-parser/src/: ast.rs  cparser.rs  expr.rs  grammar.rs  hash.rs  helpers.rs  into_python.rs  keywords.rs  lib.rs  parser.rs  position.rs  preparser.rs  reductions.rs  schema_file.rs  tokenizer.rs  validation.rs
edb/edgeql-parser/src/grammar/: from_id.rs  mod.rs  non_terminals.rs  stub.rs
edb/edgeql-parser/src/helpers/: bytes.rs  mod.rs  strings.rs
edb/edgeql-parser/src/parser/: custom_errors.rs  expr.rs  mod.rs  util.rs
edb/edgeql-parser/src/utils/: mod.rs  strings.rs
edb/edgeql-parser/tests/: expr.rs  preparser.rs  tokenizer.rs
edb/edgeql-rust/: Cargo.toml
edb/edgeql-rust/src/: errors.rs  float.rs  hash.rs  into_python.rs  keywords.rs  lib.rs  normalize.rs  parser.rs  position.rs  pynormalize.rs  pyrewrite.rs  rewrite.rs  tokenizer.rs
edb/edgeql-rust/tests/: normalize.rs  rewrite.rs
edb/graphql-rewrite/: Cargo.toml  _graphql_rewrite.pyi
edb/graphql-rewrite/src/: entry_point.rs  lib.rs  py_entry.rs  py_exception.rs  py_token.rs  pyentry.rs  pyerrors.rs  python.rs  pytoken.rs  rewrite.rs  token_vec.rs
edb/graphql-rewrite/tests/: rewrite.rs
edb/pgsql/edgedb_ext/: .gitignore  Cargo.toml  edgedb_ext.control
edb/pgsql/edgedb_ext/.cargo/: config.toml
edb/pgsql/edgedb_ext/src/: lib.rs
edb/prql/: Cargo.toml
edb/prql/src/: lib.rs
edb/server/_rust_native/: Cargo.toml
edb/server/conn_pool/: Cargo.toml  README.md
edb/server/edbrust/: Cargo.toml
edb/server/frontend/: Cargo.toml  README.md
edb/server/http/: Cargo.toml  __init__.py  http.pxd  http.pyx  port.py
edb/server/pgrust/: Cargo.toml
edb/tools/edgeql-sqlite-compiler/: Cargo.toml
edgeql-python/: Cargo.toml
edgeql-python/src/: errors.rs  lib.rs  tokenizer.rs
graphql-rewrite/: Cargo.toml
graphql-rewrite/src/: common.rs  entry_point.rs  format.rs  helpers.rs  lib.rs  position.rs  pyentry.rs  pyerrors.rs  pytoken.rs  quoting.rs  token_vec.rs  tokenizer.rs
graphql-rewrite/src/query/: ast.rs  error.rs  format.rs  grammar.rs  mod.rs
graphql-rewrite/src/schema/: ast.rs  error.rs  format.rs  grammar.rs  mod.rs
graphql-rewrite/tests/: query_errors.rs  query_roundtrips.rs  rewrite.rs  schema_roundtrips.rs
graphql-rewrite/tests/queries/: directive_args.graphql  fragment.graphql  fragment_spread.graphql  inline_fragment.graphql  inline_fragment_dir.graphql  kitchen-sink_canonical.graphql  minimal.graphql  minimal_mutation.graphql  minimal_query.graphql  mutation_directive.graphql  named_query.graphql  nested_selection.graphql  query_aliases.graphql  query_arguments.graphql  query_directive.graphql  query_list_argument.graphql  query_object_argument.graphql  query_var_default_float.graphql  query_var_default_list.graphql  query_var_default_object.graphql  query_var_default_string.graphql  query_var_defaults.graphql  query_vars.graphql  string_literal.graphql  subscription_directive.graphql  triple_quoted_literal.graphql
graphql-rewrite/tests/query_errors/: bad_args.txt  invalid_curly_brace.txt
graphql-rewrite/tests/schemas/: directive.graphql  directive_descriptions.graphql  directive_descriptions_canonical.graphql  empty_union.graphql  enum.graphql  extend_enum.graphql  extend_input.graphql  extend_input_canonical.graphql  extend_interface.graphql  extend_object.graphql  extend_scalar.graphql  implements.graphql  implements_amp.graphql  implements_amp_canonical.graphql  input_type.graphql  interface.graphql  kitchen-sink_canonical.graphql  minimal.graphql  minimal_type.graphql  scalar_type.graphql  simple_object.graphql  union.graphql  union_extension.graphql
rust/auth/: Cargo.toml  README.md
rust/auth/src/: lib.rs  scram.rs  stringprep.rs
rust/captive_postgres/: Cargo.toml  README.md
rust/captive_postgres/src/: ephemeral_port.rs  lib.rs  stdio_reader.rs
rust/conn_pool/: Cargo.toml  README.md
rust/conn_pool/src/: algo.rs  conn.rs  lib.rs  pool.rs  python.rs
rust/db_proto/: Cargo.toml  README.md
rust/db_proto/src/: arrays.rs  buffer.rs  datatypes.rs  field_access.rs  gen.rs  lib.rs  message_group.rs  test_protocol.rs
rust/gel-auth/: Cargo.toml
rust/gel-auth/src/: lib.rs  md5.rs
rust/gel-jwt/: Cargo.toml
rust/gel-jwt/benches/: bench-jwcrypto.py  encode.rs
rust/gel-jwt/src/: README.md  bare_key.rs  key.rs  lib.rs  python.rs  registry.rs  sig.rs
rust/gel-stream/: Cargo.toml
rust/gel-stream/src/: lib.rs
rust/gel-stream/tests/: socket.rs  tls.rs
rust/http/: Cargo.toml
rust/http/src/: lib.rs  python.rs
rust/pgrust/: Cargo.toml
rust/pgrust/examples/: connect.rs  dsn.rs
rust/pgrust/src/: lib.rs  python.rs
rust/pgrust/tests/: edgedb_test_cases.rs  query_real_postgres.rs  real_postgres.rs
rust/pyo3_util/: Cargo.toml
rust/pyo3_util/src/: channel.rs  lib.rs  logging.rs
tests/bench/: Cargo.toml  flake.nix
tests/bench/dumps/: mrfoxpro.dump  query1.edgeql  query2.edgeql
tests/bench/src/: helpers.rs  main.rs
tests/wasm1/: Cargo.toml
tests/wasm1/src/: main.rs
(+3779 files in other folders)
