[workspace]
members = [
    "edb/edgeql-parser",
    "edb/edgeql-parser/edgeql-parser-derive",
    "edb/edgeql-parser/edgeql-parser-python",
    "edb/graphql-rewrite",
    "edb/server/conn_pool",
]
resolver = "2"

[workspace.dependencies]
pyo3 = { version = "0.22.2", features = ["extension-module", "serde"] }
tokio = { version = "1", features = ["rt", "rt-multi-thread", "macros", "time", "sync", "net", "io-util"] }

[profile.release]
debug = true
lto = true

[workspace.lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(never)'] }
