[workspace]
members = [
    "edb/edgeql-parser",
    "edb/edgeql-parser/edgeql-parser-derive",
    "edb/edgeql-parser/edgeql-parser-python",
    "edb/graphql-rewrite",
    "edb/server/_rust_native",
    "rust/auth",
    "rust/captive_postgres",
    "rust/conn_pool",
    "rust/db_proto",
    "rust/gel-stream",
    "rust/pgrust",
    "rust/http",
    "rust/pyo3_util",
]
resolver = "2"

[workspace.dependencies]
pyo3 = { version = "0.23", features = ["extension-module", "serde", "macros"] }
tokio = { version = "1", features = ["rt", "rt-multi-thread", "macros", "time", "sync", "net", "io-util"] }
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["registry", "env-filter"] }

gel_auth = { path = "rust/auth" }
gel-stream = { path = "rust/gel-stream" }
db_proto = { path = "rust/db_proto" }
captive_postgres = { path = "rust/captive_postgres" }
conn_pool = { path = "rust/conn_pool" }
pgrust = { path = "rust/pgrust" }
http = { path = "rust/http" }
pyo3_util = { path = "rust/pyo3_util" }

[profile.release]
debug = true
lto = true

[workspace.lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(never)'] }

[patch.crates-io]
openssl-probe = { git = "https://github.com/edgedb/openssl-probe/", rev = "e5ed593600d1f8128629565d349682f54b3a8b57" }
