[project]
name = "gel-server"
description = "Gel Server"
requires-python = '>=3.12.0'
dynamic = ["version"]
dependencies = [
    'gel==3.0.0b7',

    'httptools>=0.6.0',
    'immutables>=0.18',
    'parsing~=2.0',
    'uvloop~=0.21.0',

    'click~=8.0',
    'cryptography~=42.0',
    'graphql-core~=3.1.5',
    'jwcrypto~=1.3.1',
    'psutil~=5.8',
    'setproctitle~=1.2',

    'hishel==0.0.24',
    'webauthn~=2.0.0',
    'argon2-cffi~=23.1.0',
    'aiosmtplib~=3.0',
    'tiktoken~=0.7.0',
    'mistral_common~=1.2.1',
]

[project.scripts]
edb = "edb.tools.edb:edbcommands"

edgedb-server = "edb.server.main:main"
edgedb-load-ext = "edb.load_ext.main:main"
edgedb-ls = "edb.language_server.main:main"
edgedb = "edb.cli:rustcli"

gel-server = "edb.server.main:main"
gel-load-ext = "edb.load_ext.main:main"
gel-ls = "edb.language_server.main:main"
gel = "edb.cli:rustcli"

[project.optional-dependencies]
test = [
    'black~=24.2.0',
    'coverage~=7.4',
    'ruff==0.3.7',
    'asyncpg~=0.30.0',

    # Needed for testing asyncutil
    'async_solipsism==0.5.0',

    # Needed for test_docs_sphinx_ext
    'requests-xml~=0.2.3',

    # For rebuilding GHA workflows
    'Jinja2~=2.11',
    'MarkupSafe~=1.1',
    'PyYAML~=6.0',

    'mypy[faster-cache] ~= 1.13.0',
    # mypy stub packages; when updating, you can use mypy --install-types
    # to install stub packages and then pip freeze to read out the specifier
    'types-docutils~=0.17.0,<0.17.6', # incomplete nodes.document.__init__
    'types-Jinja2~=2.11',
    'types-MarkupSafe~=1.1',
    'types-setuptools~=71.1.0',
    'types-typed-ast~=1.4.2',
    'types-requests~=2.25.6',
    'types-PyYAML~=6.0',

    'prometheus_client~=0.11.0',

    'docutils~=0.17.0',
    'lxml~=4.9.0',
    'Pygments~=2.10.0',
    'Sphinx~=4.2.0',
    'sphinxcontrib-asyncio~=0.3.0',
    'sphinxcontrib-applehelp<1.0.8',
    'sphinxcontrib-devhelp<1.0.6',
    'sphinxcontrib-htmlhelp<2.0.5',
    'sphinxcontrib-serializinghtml<1.1.10',
    'sphinxcontrib-qthelp<1.0.7',
    'sphinx_code_tabs~=0.5.3',
]

docs = [
    'docutils~=0.17.0',
    'lxml~=4.9.0',
    'Pygments~=2.10.0',
    'Sphinx~=4.2.0',
    'sphinxcontrib-asyncio~=0.3.0',
    'sphinx_code_tabs~=0.5.3',
]

language-server = ['pygls~=1.3.1']

[build-system]
requires = [
    "Cython(>=3.0.11,<3.1.0)",
    "packaging >= 21.0",
    "setuptools >= 67",
    "setuptools-rust ~= 1.8",
    "wheel",

    "parsing ~= 2.0",
    "gel==3.0.0b7",
]
# Custom backend needed to set up build-time sys.path because
# setup.py needs to import `edb.buildmeta`.
build-backend = "build_backend"
backend-path = ["."]

[tool.setuptools]
packages = { find = { include = ["edb", "edb.*"] } }
zip-safe = false


# ========================
#          BLACK
# ========================
[tool.black]
line-length = 80
target-version = ["py310"]
skip-string-normalization = true


# ========================
#          MYPY
# ========================

[tool.mypy]
exclude = [
    "^.eggs",
    "^.github",
    "^.vscode",
    "^build",
    "^dist",
    "^docs",
    "^postgres",
    "^target",
]
files = "."
python_version = "3.12"
plugins = "edb/tools/mypy/plugin.py"
follow_imports = "normal"
ignore_missing_imports = true
warn_redundant_casts = true
warn_unused_configs = true
show_column_numbers = true
show_error_codes = true
local_partial_types = true
# This being an error seems super confused to me.
disable_error_code = "type-abstract"

[[tool.mypy.overrides]]
module = [
    "edb.common.adapter",
    "edb.edgeql.compiler.*",
    "edb.edgeql.codegen",
    "edb.edgeql.declarative",
    "edb.edgeql.tracer",
    "edb.graphql.types",
    "edb.ir.*",
    "edb.pgsql.metaschema",
    "edb.pgsql.codegen",
    "edb.pgsql.types",
    "edb.pgsql.compiler.*",
    "edb.repl.*",
    "edb.schema.*",
    "edb.schema.reflection.*",
    "edb.server.cluster",
    "edb.server.compiler.*",
    "edb.server.config",
    "edb.server.connpool.*",
    "edb.server.protocol.*",
    "edb.server.pgcluster",
    "edb.server.pgconnparams",
]
# Equivalent of --strict on the command line,
# but without disallow_untyped_calls:
disallow_subclassing_any = true
disallow_any_generics = true
# disallow_untyped_calls = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_unused_ignores = true
warn_return_any = true
no_implicit_reexport = true
strict_equality = true

[[tool.mypy.overrides]]
module = [
    "edb.common.checked",
    "edb.common.compiler",
    "edb.common.ordered",
    "edb.common.parametric",
    "edb.common.retryloop",
    "edb.common.struct",
    "edb.common.topological",
    "edb.common.uuidgen",
    "edb.common.value_dispatch",
]
# Equivalent of --strict on the command line:
disallow_subclassing_any = true
disallow_any_generics = true
disallow_untyped_calls = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_unused_ignores = true
warn_return_any = true
no_implicit_reexport = true
strict_equality = true


# ========================
#        COVERAGE
# ========================
[tool.coverage.run]
branch = false
plugins = ["Cython.Coverage"]
parallel = true

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if debug",
    "raise NotImplementedError",
    "if __name__ == .__main__.",
]
show_missing = true
ignore_errors = true

# Change the below to invalidate dependency cache in CI
# CACHE-TAG: 2

[tool.ruff]
line-length = 80
indent-width = 4
exclude = ["postgres", ".github"]

[tool.ruff.lint]
preview = true
select = ["E", "F", "W", "B"]
ignore = [
    "F541", # f-string without any placeholders
    "B904", # Within an except clause, raise exceptions with raise ... from err
    # or raise ... from None to distinguish them from errors in
    # exception handling
    "E731", # Do not assign a lambda expression, use a def
    "E741", # Ambiguous variable name: l or i or I
    "E252", # Missing whitespace around parameter equals

    # TODO: enable this
    "B905", # zip() without an explicit strict= parameter

    # TODO: enable this (this was tried before - it is non-trivial)
    "B019", # Use of functools.lru_cache or functools.cache on methods can lead
    # to memory leaks
]
flake8-bugbear.extend-immutable-calls = ["immutables.Map"]

[tool.pyright]
# Pyright has no idea about metaclass-generated getters for schema fields.
reportAttributeAccessIssue = false
typeCheckingMode = "off"
