[metadata]
name = edgedb-server
description = EdgeDB Server
author = MagicStack Inc.
author-email = hello@magic.io
home-page = http://edgedb.com

[files]
packages =
    edgedb

[entry_points]
console_scripts =
    edgedb = edgedb.repl:main
    edgedb-server = edgedb.server.main:main
    edgedb-ctl = edgedb.server.ctl:main

[global]
commands = edgedb.lang.build.build

[yapf]
based_on_style = pep8
column_limit = 79
coalesce_brackets = True
dedent_closing_brackets = False
spaces_around_power_operator = True
split_before_first_argument = True
split_before_named_assigns = False
