[package]
name = "edgeql-parser"
version = "0.1.0"
license = "MIT/Apache-2.0"
authors = ["MagicStack Inc. <hello@magic.io>"]
rust-version = "1.59"
edition = "2021"

[dependencies]
base32 = "0.4.0"
bigdecimal = { version = "0.3.0", features = ["serde"] }
num-bigint = { version = "0.3.0", features = ["serde"] }
sha2 = "0.10.2"
snafu = "0.7.0"
memchr = "2.5.0"
wasm-bindgen = { version = "0.2", features = [
    "serde-serialize"
], optional = true }
serde = { version = "1.0.106", features = ["derive"], optional = true }
thiserror = "1.0.23"
unicode-width = "0.1.8"
edgeql-parser-derive = { path = "edgeql-parser-derive", optional = true }
cpython = { version = "0.7.0", optional = true }
indexmap = "1.9.3"
serde_json = { version = "1.0", features = ["preserve_order"] }
bumpalo = { version = "3.13.0", features = ["collections"] }
phf = { version = "0.11.1", features = ["macros"] }
append-only-vec = "0.1.2"

[features]
default = []
wasm-lexer = ["wasm-bindgen", "serde"]
python = ["cpython", "serde", "edgeql-parser-derive"]

[lib]
