[package]
name = "edgeql-rust"
license = "MIT/Apache-2.0"
version = "0.1.0"
authors = ["MagicStack Inc. <hello@magic.io>"]
edition = "2018"

[dependencies]
edgeql-parser = {path = "../edgeql-parser"}
combine = "4.0.0-beta.1"

[dependencies.cpython]
name = "cpython"
version = "0.4.1"
features = ["extension-module"]

[lib]
crate-type = ["cdylib"]
name = "edgeql_rust"
path = "src/lib.rs"
