[package]
name = "edgeql-rust"
license = "MIT/Apache-2.0"
version = "0.1.0"
authors = ["MagicStack Inc. <hello@magic.io>"]
rust-version = "1.59"
edition = "2021"

[dependencies]
edgeql-parser = {path = "../edgeql-parser"}
combine = "4.5.2"
bytes = "1.0.1"
num-bigint = "0.4.3"
bigdecimal = "0.3.0"
blake2 = "0.10.4"

[dependencies.edgedb-protocol]
git = "https://github.com/edgedb/edgedb-rust"
features = ["with-num-bigint", "with-bigdecimal"]

[dependencies.cpython]
version = "0.7.0"
features = ["extension-module"]

[lib]
crate-type = ["lib", "cdylib"]
name = "edgeql_rust"
path = "src/lib.rs"
