[package]
name = "graphql-rewrite"
version = "0.1.0"
license = "MIT/Apache-2.0"
authors = ["MagicStack Inc. <hello@magic.io>"]
rust-version = "1.65.0"
edition = "2021"

[dependencies]
combine = "3.8"
thiserror = "1.0.11"
num-bigint = "0.4.3"
num-traits = "0.2.11"
edb-graphql-parser = { git="https://github.com/edgedb/graphql-parser" }

[dependencies.pyo3]
version = "0.20.2"
features = ["extension-module"]

[dev-dependencies]
pretty_assertions = "1.2.0"

[lib]
crate-type = ["lib", "cdylib"]
name = "graphql_rewrite"
path = "src/lib.rs"
