[package]
name = "graphql-rewrite"
version = "0.1.0"
license = "MIT/Apache-2.0"
authors = ["MagicStack Inc. <hello@magic.io>"]
edition = "2021"

[lints]
workspace = true

[features]
python_extension = ["pyo3/extension-module"]
default = ["python_extension"]

[dependencies]
pyo3 = { workspace = true, optional = true }

combine = "3.8"
thiserror = "1.0.11"
num-bigint = "0.4.3"
num-traits = "0.2.11"
edb-graphql-parser = { git="https://github.com/edgedb/graphql-parser" }

[dev-dependencies]
pretty_assertions = "1.2.0"

[lib]
crate-type = ["lib", "cdylib"]
name = "graphql_rewrite"
path = "src/lib.rs"
