
[package]
name = "captive_postgres"
version = "0.1.0"
license = "MIT/Apache-2.0"
authors = ["MagicStack Inc. <hello@magic.io>"]
edition = "2021"

[lints]
workspace = true

[dependencies]
gel-auth.workspace = true

openssl = "0.10.70"
tempfile = "3"
socket2 = { version = "0.5", features = ["all"] }
nix = { version = "0.29", features = ["signal"] }
