[package]
name = "db_proto"
version = "0.1.0"
license = "MIT/Apache-2.0"
authors = ["MagicStack Inc. <hello@magic.io>"]
edition = "2021"

[lints]
workspace = true

[dependencies]
thiserror = "1"
paste = "1"
derive_more = { version = "1", features = ["full"] }
uuid = "1"

[dev-dependencies]
pretty_assertions = "1.2.0"
