[package]
name = "gel-auth"
version = "0.1.0"
license = "MIT/Apache-2.0"
authors = ["MagicStack Inc. <hello@magic.io>"]
edition = "2021"

[lints]
workspace = true

[features]
python_extension = ["pyo3"]

[dependencies]
pyo3 = { workspace = true, optional = true }
tracing.workspace = true
md5 = "0.7.0"
constant_time_eq = "0.3"
derive_more = { version = "1", features = ["debug"] }
rand = "0.8.5"
unicode-normalization = "0.1.23"
base64 = "0.22"
roaring = "0.10.6"
hmac = "0.12.1"
sha2 = "0.10.8"
thiserror = "2"

[dev-dependencies]
pretty_assertions = "1"
rstest = "0.24.0"
hex-literal = "0.4.1"

[lib]
