[package]
name = "gel-stream"
version = "0.1.0"
edition = "2021"
description = "A library for streaming data between clients and servers."

[features]
# rustls or openssl imply tokio, and tokio is the only stream we support
# at this time.
default = ["tokio"]
client = []
server = []
tokio = ["dep:tokio"]
rustls = ["tokio", "dep:rustls", "dep:rustls-tokio-stream", "dep:rustls-platform-verifier", "dep:webpki"]
openssl = ["tokio", "dep:openssl", "dep:tokio-openssl", "dep:foreign-types", "dep:openssl-sys"]
hickory = ["dep:hickory-resolver"]
__manual_tests = []

[dependencies]
derive_more = { version = "1", features = ["full"] }
thiserror = "2"
futures = "0.3"

# Given that this library may be used in multiple contexts, we want to limit the
# features we enable by default.

rustls-pki-types = { version = "1", default-features = false, features = ["std"] }

# feature = "tokio"
tokio = { version = "1", optional = true, default-features = false, features = ["net", "rt"] }
hickory-resolver = { version = "0.24.2", optional = true, default-features = false, features = ["tokio-runtime", "system-config"] }

# feature = "rustls"
rustls = { version = "0.23", optional = true, default-features = false, features = ["ring", "logging", "std", "tls12"] }
rustls-tokio-stream = { version = "0.5.0", optional = true }
rustls-platform-verifier = { version = "0.5.0", optional = true }
webpki = { version = "0.22", optional = true }

# feature = "openssl"
openssl = { version = "0.10.70", optional = true, default-features = false }
tokio-openssl = { version = "0.6.5", optional = true, default-features = false }
# Get these from openssl
foreign-types = { version = "*", optional = true, default-features = false }
openssl-sys = { version = "*", optional = true, default-features = false }

[dev-dependencies]
# Run tests with all features enabled
gel-stream = { workspace = true, features = ["client", "server", "tokio", "rustls", "openssl"] }

tokio = { version = "1", features = ["full"] }
tempfile = "3"
ntest = "0.9.3"
rustls-pemfile = "2"
rstest = "0.24.0"

[lints]
workspace = true

[lib]
name = "gel_stream"
