[package]
name = "http"
version = "0.1.0"
license = "MIT/Apache-2.0"
authors = ["MagicStack Inc. <hello@magic.io>"]
edition = "2021"

[lints]
workspace = true

[features]
python_extension = ["pyo3"]

[dependencies]
pyo3 = { workspace = true, optional = true }
tokio.workspace = true
pyo3_util.workspace = true
tracing.workspace = true

reqwest = { version = "0.12", features = ["gzip", "deflate", "stream"] }
scopeguard = "1"
eventsource-stream = "0.2.3"

futures = "0"

[dev-dependencies]
tokio = { workspace = true, features = ["test-util"] }
rstest = "0.23"

[lib]
