[package]
name = "pgrust"
version = "0.1.0"
license = "MIT/Apache-2.0"
authors = ["MagicStack Inc. <hello@magic.io>"]
edition = "2021"

[lints]
workspace = true

[features]
python_extension = ["pyo3/serde"]
optimizer = []

[dependencies]
gel_auth.workspace = true
pyo3.workspace = true
tokio.workspace = true
tracing.workspace = true
db_proto.workspace = true
gel-stream.workspace = true

futures = "0"
thiserror = "1"
openssl = { version = "0.10.66", features = ["v111"] }
tokio-openssl = "0.6.4"
paste = "1"
base64 = "0.22"
rand = "0"
hexdump = "0"
url = "2"
serde = "1"
serde_derive = "1"
percent-encoding = "2"
bytemuck = { version = "1", features = ["derive"] }

[dependencies.derive_more]
version = "1.0.0-beta.6"
features = ["full"]

[dev-dependencies]
tracing-subscriber.workspace = true
captive_postgres.workspace = true

scopeguard = "1"
pretty_assertions = "1.2.0"
test-log = { version = "0", features = ["trace"] }
rstest = "0"
clap = "4"
clap_derive = "4"
libc = "0.2.158"
hex-literal = "0.4.1"

[lib]
